# kibrary-automator

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.dev  Dockerfile.smoke-real  Dockerfile.smoke-ui  Dockerfile.test  Dockerfile.visual-verify  README.md  docker-compose.dev.yml  index.html  kibrary_automator.py  library_automator.py  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
sidecar/: build-binary.sh  pyproject.toml
sidecar/.build-venv/: pyvenv.cfg
sidecar/kibrary_sidecar/: __init__.py  __main__.py  bootstrap.py  category_map.py  downloader.py  drop_import.py  editor.py  files.py  git_ops.py  git_undo.py  icons.py  jlc.py  kicad_install.py  kicad_register.py  lib_ops.py  lib_scanner.py  library.py  methods.py  model3d_ops.py  parser.py  protocol.py  render_3d.py  render_3d_glb.py  rpc.py  search_client.py  secrets.py  settings.py  sexpr_diff.py  staging.py  svg_render.py  symfile.py  workspace.py
sidecar/tests/: test_active_install.py  test_bootstrap.py  test_category_map.py  test_downloader.py  test_drop_import.py  test_editor.py  test_files.py  test_git_ops.py  test_git_undo.py  test_icons.py  test_jlc.py  test_kicad_install.py  test_kicad_register.py  test_lib_ops.py  test_lib_scanner.py  test_library.py  test_library_register.py  test_methods_suggest.py  test_model3d_ops.py  test_parser.py  test_render_3d.py  test_render_3d_angled.py  test_render_3d_glb.py  test_rpc.py  test_search_client.py  test_secrets.py  test_settings.py  test_sexpr_diff.py  (+4 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
(+127 files in other folders)
