[project]
name = "kibrary-sidecar"
version = "26.5.4-alpha.1"
requires-python = ">=3.10"
dependencies = [
  "kiutils>=1.4.8",
  "JLC2KiCadLib>=1.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "GitPython>=3.1.43",
  "keyring>=25.6.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "pyinstaller>=6.10.0", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kibrary_sidecar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
